kubernetes/apps/default/podinfo/apps/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: podinfo
  namespace: default
spec:
  parentRefs:
    - kind: Gateway
      name: podinfo-gateway
      namespace: default
      sectionName: podinfo-tls-gw
  hostnames:
    - podinfo.home.svc
  rules:
    - backendRefs:
        - name: podinfo
          port: 9898
